[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PanelContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="MusicRow" type="HBoxContainer" parent="PanelContainer/VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="PanelContainer/VBox/SettingsContainer/MusicRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/VBox/SettingsContainer/MusicRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="MusicValue" type="Label" parent="PanelContainer/VBox/SettingsContainer/MusicRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="SFXRow" type="HBoxContainer" parent="PanelContainer/VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="PanelContainer/VBox/SettingsContainer/SFXRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/VBox/SettingsContainer/SFXRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="SFXValue" type="Label" parent="PanelContainer/VBox/SettingsContainer/SFXRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="WindowRow" type="HBoxContainer" parent="PanelContainer/VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WindowLabel" type="Label" parent="PanelContainer/VBox/SettingsContainer/WindowRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Window"

[node name="WindowDropdown" type="OptionButton" parent="PanelContainer/VBox/SettingsContainer/WindowRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18

[node name="Spacer" type="Control" parent="PanelContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"
